--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ html {
 
 h1 { 
     font-size: 3.5em;
-    font-weight: bolder;
 }
 
 h2 { 
@@ -19,7 +18,9 @@ h2 {
 
 
 p { 
-    font-size: 0.875em;
+    font-size: 1em;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 /* ---------- Class Styles */ 
@@ -30,13 +31,23 @@ p {
 }
 
 /* creates container */
-.container {
+.ccontainer {
     display: flex;
     flex-direction: var(--direction,column);
     justify-content: center;
     align-items: center;
     height: var(--height,100%);
-    gap: var(--gap,0px)
+    gap: var(--gap,0px);
+}
+
+.hcontainer {
+    display: flex;
+    flex-direction: var(--direction,column);
+    align-items: center;
+    height: var(--height,100%);
+    gap: var(--gap,0px);
+    padding-top: 124px;
+    
 }
 
 /* Adds cursive font  */
@@ -63,10 +74,32 @@ p {
     padding-bottom: 1px;
 }
 
+.bunderline {
+    display: inline-block;
+    border-bottom: 4px solid currentColor;
+    padding-bottom: 1px;
+}
+
+.bshadow { 
+    box-shadow: 0px 6px 15px 6px rgba(0,0,0,.25);
+}
+
+tpad { 
+    padding-top: 10%;
+}
+
 /* --------- ID styles */
 
 /* background scrap book image */
 #hero {
     background-image: url(./images/bg-hero.png);
     height: fit-content;
+}
+
+#content {
+    background-image: url(./images/bgtile.png);
+    background-repeat: repeat;
+    background-position: top;
+    background-size: auto;
+
 }
